--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -54,6 +54,12 @@ gem "graphql", "~> 2.0.23"
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
+  gem "rspec-rails", "~> 6.0.0"
+  gem "rubocop", "~> 1.54"
+  gem "rubocop-graphql", "~> 1.3.0"
+  gem "rubocop-rails", "~> 2.20.0"
+  gem "rubocop-rake", "~> 0.6.0"
+  gem "rubocop-rspec", "~> 2.22.0"
 end
 
 group :development do
@@ -70,7 +76,7 @@ end
 
 group :test do
   # Use system testing [https://guides.rubyonrails.org/testing.html#system-testing]
-  gem "capybara"
-  gem "selenium-webdriver"
-  gem "webdrivers"
+  # gem "capybara"
+  # gem "selenium-webdriver"
+  # gem "webdrivers"
 end
