--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -8,6 +8,12 @@ AllCops:
   TargetRubyVersion: 3.0
   NewCops: enable
 
+Layout/LineLength:
+  Max: 120
+
+Style/Documentation:
+  Enabled: false
+
 Style/StringLiterals:
   Enabled: true
   EnforcedStyle: double_quotes
@@ -16,5 +22,3 @@ Style/StringLiteralsInInterpolation:
   Enabled: true
   EnforcedStyle: double_quotes
 
-Layout/LineLength:
-  Max: 120
