--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -66,6 +66,8 @@ end
 group :development do
   # Use console on exceptions pages [https://github.com/rails/web-console]
   gem "graphiql-rails"
+  gem "solargraph"
+  gem "solargraph-rails"
   gem "web-console"
 
   # Add speed badges [https://github.com/MiniProfiler/rack-mini-profiler]
